<resources>
    <string name="app_name">ToDo</string>
    <string name="forgot_pwd">forgot_pwd</string>
    <string name="login_successfull">Login Successfully</string>
    <string name="show_as_view">text_changeView</string>
    <string name="text_settings">text_settings</string>
    <string name="text_skip">text_skip</string>
    <string name="details">"enter your details or create Account"</string>
    <string name="password">"invalid Password"</string>
    <string name="registration_successful">"RegisterActivity Successful"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email_should_not_empty">Emailshouldnotempty</string>
    <string name="invalid_Emailid">invalidEmailid</string>
    <string name="Password_should_not_empty">Passwordshouldnotempty</string>
    <string name="name_should_not_empty">name_shouldnotempty</string>
    <string name="email_should_not_empty">emailshouldnotempty</string>
    <string name="invalid_Email">invalidEmail</string>
    <string name="password_should_not_empty">passwordshouldnotempty</string>
    <string name="password_should_be_minimum_5_character">passwordshould_beminimum5character</string>
    <string name="wrong_format_of_password">wrong_formatofpassword</string>
    <string name="navigation_drawer_closeClose">navigationdrawercloseClose</string>
    <string name="mobile_no_should_not_be_empty">mobilenoshouldnotbeempty</string>
    <string name="mobile_no_should_be_10_digit">mobilenoshouldbe10digit</string>
    <string name="Emailid_should_not_empty">Emailidshouldnotempty</string>
    <string name="Address_should_not_empty">Addressshouldnotempty</string>
    <string name="Open_navigation_drawer">Opennavigationdrawer</string>
    <string name="navigation_drawer_close">navigationdrawerclose</string>
    <string name="action_mark_all_read">actionmarkallread</string>
    <string name="action_clear_all">actionclearall</string>
    <string name="Notes">Notes</string>
    <string name="Reminders">Reminders</string>
    <string name="Createnewlabel">Createnewlabel</string>
    <string name="Archive">Archive</string>
    <string name="Deleted">Deleted</string>
    <string name="Settings">Settings</string>
    <string name="invalid_password">invalidpassword</string>
    <string name="Logout">Logout</string>
    <string name="invalid_Password">invalidPassword</string>
    <string name="password_should_be_minimum_8_character">passwordshouldbeminimum8character</string>
    <string name="name_should_not_be_empty">nameshouldnotbeempty</string>
    <string name="Emailid_should_not_be_empty">Emailidshouldnotbeempty</string>
    <string name="Address_should_not_be_empty">Addressshouldnotbeempty</string>
    <string name="password_should_be_minimum_10_character">passwordshouldbeminimum10character</string>
    <string name="registration">registration</string>
    <string name="keyemail">keyemail</string>
    <string name="email">email</string>
    <string name="email_should_not_be_empty">emailshouldnotbeempty</string>
    <string name="facebook_app_id">184983755355416</string>
    <string name="auth_failed">authfailed</string>
    <string name="no_internet">nointernet</string>
    <string name="retry">retry</string>
    <string name="public_profile">public_profile</string>
    <string name="no_internet_connection">nointernetconnection</string>
    <string name="RETRY">RETRY</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Id">Id</string>
    <string name="name">name</string>
    <string name="note_details">note_details</string>
    <string name="item_Selectd">Notes</string>
    <string name="Reminder">Reminder</string>
    <string name="uid">uid</string>
    <string name="R.string.password">email</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="id">id</string>
    <string name="welcome">Welcome :</string>
    <string name="first_name">first_name</string>
    <string name="No_Internet_Connection">No_Internet_Connection</string>
    <string name="date_time">MMMM dd, yyyy</string>
    <string name="time">Date date;</string>
    <string name="note_has_been_Archieved">note_has_been_Archieved</string>
    <string name="UNDO">UNDO</string>
    <string name="Undo_done">Undo_done</string>
    <string name="loading">loading</string>
    <string name="cancel_button">cancel_button</string>
    <string name="some_error">some_error</string>
    <string name="moving_to_note">moving_to_note</string>
    <string name="ask_move_to_note_message">ask_move_to_note_message</string>
    <string name="ok_button">ok_button</string>
    <string name="cancel_message">cancel_message</string>
    <string name="date_formate">date_formate</string>
    <string name="please_wait">pleasewait</string>
    <string name="Success">Success</string>
    <string name="pleasewait">pleasewait</string>
    <string name="Failed">Failed</string>
    <string name="loginsuccessfull">loginsuccessfull</string>
    <string name="entercorrectdetails">entercorrectdetails</string>
    <string name="users">users</string>
    <string name="google_login_failed">google_login_failed</string>
    <string name="Pic">Pic</string>
    <string name="fail">fail</string>
    <string name="item_archieved">item_archieved</string>
    <string name="undo">undo</string>
    <string name="item_restored">item_restored</string>
    <string name="image_pick_error" />
    <string name="upload_pro_pic" />
    <string name="select_pick" />
    <string name="flag_true">flag_true</string>
    <string name="flag_false">flag_false</string>
    <string name="forgotpassword">forgotpassword</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logout_success">logout_success</string>
    <string name="moving_to_note_fail">moving_to_note_fail</string>
    <string name="moving_to_note_success">moving_to_note_success</string>
    <string name="item_deleted">item_deleted</string>
    <string name="empty_trash">empty_trash</string>
    <string name="getting_deleted_notes">getting_deleted_notes</string>
    <string name="delete_failure">delete_failure</string>
    <string name="move_to_trash">move_to_trash</string>
    <string name="custom_transition">transition</string>
    <string name="Title">Title\n</string>
    <string name="Description">\n\nDiscription\n</string>

</resources>
