<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/Notes" />
        <item
            android:id="@+id/nav_Reminders"
            android:icon="@drawable/ic_reminder"
            android:title="@string/Reminders" />
        <item
            android:id="@+id/nav_Createnewlabel"
            android:icon="@drawable/pencil"
            android:title="@string/Createnewlabel"
            android:visible="false"
            />

        <item
            android:id="@+id/nav_Archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/Archive" />

        <item
            android:id="@+id/nav_Deleted"
            android:icon="@drawable/ic_delete"
            android:title="@string/Deleted" />
        <item
            android:id="@+id/nav_Share"
            android:icon="@drawable/share"
            android:title="Share"
            />
        <item
            android:id="@+id/Logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout"

            />


    </group>


</menu>